--- a/Day1/LombScargle1_mine.ipynb
+++ b/Day1/LombScargle1_mine.ipynb
@@ -425,10 +425,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "4. In part III, we discussed two effects of real observing: the effect of a finite observation window, and the effect of a sequence of equally-spaced observations. Sketch the effect (literally draw, don't use Python) of both of these effects on an observation of a sine function:\n",
     "\n",
@@ -436,8 +434,13 @@
     "\n",
     "   b. Draw the window function of a finite number of equally spaced observations.\n",
     "   \n",
-    "   c. Draw the observed signal and its Fourier transform. \n",
-    "\n",
+    "   c. Draw the observed signal and its Fourier transform. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. In part III, we discussed the combined effects of finite observing windows and equally spaced instantaneous observation times. However, what if our exposure lasts a long time, and can't be considered instantaneous? For the example signal given in the plots in Section III, sketch the effect (literally draw, don't use Python) of equally spaced *finite-length observing time* observations on the signal you observe and the Fourier transforms of the window function and the observed signal, following the same procedure you used in question 4. "
    ]
   },
@@ -446,9 +449,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "5. In part III, we discussed the combined effects of finite observing windows and equally spaced instantaneous observation times. However, what if our exposure lasts a long time, and can't be considered instantaneous? For the example signal given in the plots in Section III, sketch the effect (literally draw, don't use Python) of equally spaced *finite-length observing time* observations on the signal you observe and the Fourier transforms of the window function and the observed signal, following the same procedure you used in question 4. "
-   ]
+   "source": []
   }
  ],
  "metadata": {
